@@ -315,8 +315,7 @@ cdef class _XDRFile:
             #  at the end of the trajectory.
             self.seek(current_frame - 1)
             _ = self.read()
-        else:
-            #pragma: no cov
+        else:       # pragma: no cover
             raise RuntimeError("Invalid frame number {} > {} -- this should"
                                "not happen.".format(current_frame,
                                                     self.offsets.size)
